[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/UI/Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/UIGrid.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/Label.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=5]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_right = 0.5
text = "Let's get to the core!"

[node name="MenuGrid" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = -314.0
margin_bottom = -16.0
rect_clip_content = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonStart" parent="MenuGrid" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 198.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 0.5, 0.5 )
text = "Start"

[node name="ButtonOptions" parent="MenuGrid" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 72.0
margin_right = 198.0
margin_bottom = 140.0
text = "Options"

[node name="ButtonAbout" parent="MenuGrid" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 144.0
margin_right = 198.0
margin_bottom = 212.0
text = "About Us"

[node name="ButtonQuit" parent="MenuGrid" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 216.0
margin_right = 198.0
margin_bottom = 284.0
text = "Quit"

[connection signal="pressed" from="MenuGrid/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="MenuGrid/ButtonOptions" to="." method="_on_ButtonOptions_pressed"]
[connection signal="pressed" from="MenuGrid/ButtonAbout" to="." method="_on_ButtonAbout_pressed"]
[connection signal="pressed" from="MenuGrid/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
